# funciones-actuariales

./: .gitignore  Funciones_Actuariales_Notebook.ipynb  README.md  ejemplo.py  pyproject.toml
notebooks/: Funciones_Actuariales_Notebook.ipynb
src/funciones_actuariales/: __init__.py  anualidades.py  conmutacion.py  interes.py  seguros.py  tablas.py  utilidades.py  valores_presentes.py
tests/: test_anualidades.py  test_conmutacion.py  test_interes.py  test_seguros.py  test_valores_presentes.py
