[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funciones-actuariales"
version = "0.1.0"
description = "Librería en Python con funciones actuariales en español"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
  {name = "Fernanda León"}
]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
